fix(privacy): mask inactive player identity in history